// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIcon with account renders children in correct order 1`] = `
.c1 {
  height: 16px;
  width: 16px;
  border-radius: 50%;
  background-color: #98A1C0;
  font-size: initial;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
}

.c0 > img,
.c0 span {
  height: 16px;
  width: 16px;
}

.c2 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 16px;
  height: 16px;
  bottom: -4px;
  right: -4px;
  border-radius: 50%;
  outline: 2px solid #FFFFFF;
  outline-offset: -0.1px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.c4 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 16px;
  height: 16px;
  bottom: -4px;
  left: -4px;
  border-radius: 50%;
  outline: 2px solid #FFFFFF;
  outline-offset: -0.1px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.c3 {
  width: 16px;
  height: 16px;
}

@media (max-width:960px) {
  .c0 {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@supports (overflow:clip) {
  .c2 {
    overflow: clip;
  }
}

@supports (overflow:clip) {
  .c4 {
    overflow: clip;
  }
}

<div
  class="c0"
  data-testid="StatusIconRoot"
  size="16"
>
  <div
    class="c1"
  >
    <span>
      <div
        style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(1, 142, 114);"
      >
        <svg
          height="16"
          width="16"
          x="0"
          y="0"
        >
          <rect
            fill="#2392E1"
            height="16"
            transform="translate(-2.3133027096725978 4.697080312784296) rotate(160.7 8 8)"
            width="16"
            x="0"
            y="0"
          />
          <rect
            fill="#FB1895"
            height="16"
            transform="translate(-8.001736856572315 5.2625070066797255) rotate(299.1 8 8)"
            width="16"
            x="0"
            y="0"
          />
          <rect
            fill="#F90501"
            height="16"
            transform="translate(-10.68845745466197 0.5127796994888634) rotate(211.8 8 8)"
            width="16"
            x="0"
            y="0"
          />
        </svg>
      </div>
    </span>
  </div>
  <div
    class="c2"
  >
    <img
      alt="MetaMask icon"
      class="c3"
      src="metamask.svg"
    />
  </div>
  <div
    class="c4"
  >
    <img
      class="c3"
      src="socks.svg"
    />
  </div>
</div>
`;

exports[`StatusIcon with no account renders children in correct order 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 8px;
}

.c0 > img,
.c0 span {
  height: 16px;
  width: 16px;
}

.c1 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 16px;
  height: 16px;
  bottom: -4px;
  right: -4px;
  border-radius: 50%;
  outline: 2px solid #FFFFFF;
  outline-offset: -0.1px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.c3 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 16px;
  height: 16px;
  bottom: -4px;
  left: -4px;
  border-radius: 50%;
  outline: 2px solid #FFFFFF;
  outline-offset: -0.1px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.c2 {
  width: 16px;
  height: 16px;
}

@media (max-width:960px) {
  .c0 {
    -webkit-align-items: flex-end;
    -webkit-box-align: flex-end;
    -ms-flex-align: flex-end;
    align-items: flex-end;
  }
}

@supports (overflow:clip) {
  .c1 {
    overflow: clip;
  }
}

@supports (overflow:clip) {
  .c3 {
    overflow: clip;
  }
}

<div
  class="c0"
  data-testid="StatusIconRoot"
  size="16"
>
  <div
    class="c1"
  >
    <img
      alt="MetaMask icon"
      class="c2"
      src="metamask.svg"
    />
  </div>
  <div
    class="c3"
  >
    <img
      class="c2"
      src="socks.svg"
    />
  </div>
</div>
`;
